clusters/prod-cluster/infrastructure/networking/traefik/dns-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-numinia-xyz
  namespace: traefik
spec:
  type: ExternalName
  externalName: acme-dns-dns.cert-manager.svc.cluster.local
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
