clusters/prod-cluster/infrastructure/networking/traefik/dns-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: acme-dns-tcp
  namespace: traefik
spec:
  entryPoints:
    - dns-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: auth-numinia-xyz
          port: 53
